--- a/RendererUI/Views/MainWindow.axaml
+++ b/RendererUI/Views/MainWindow.axaml
@@ -14,7 +14,7 @@
     </Design.DataContext>
 
     <Grid ColumnDefinitions="2*,Auto"
-          RowDefinitions="Auto,Auto,Auto,Auto"
+          RowDefinitions="Auto,Auto,Auto,Auto,Auto"
           Margin="10">
         <TextBox Grid.Column="0"
                  Grid.Row="0"
@@ -54,19 +54,31 @@
                     Spacing="10">
             <ComboBox Items="{Binding FFTWindows}"
                       SelectedItem="{Binding SelectedFFTWindow}"/>
+            <CheckBox IsChecked="{Binding UseImaginaryAndRealAverage}"
+                      Content="Use Real + Imaginary FFT Average"/>
+        </StackPanel>
+        
+        <StackPanel Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="3"
+                    Margin="10"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    Orientation="Horizontal"
+                    Spacing="10">
+            <CheckBox IsChecked="{Binding UseImaginaryFFTValues}"
+                      Content="Use Imaginary FFTs"/>
             <CheckBox IsChecked="{Binding UseFFTPositions}"
                       Content="Use FFT Positions"/>
-            <CheckBox IsChecked="{Binding UseImaginaryFFTValues}"
-                      Content="Use Imaginary FFT Values"/>
         </StackPanel>
         
         <TextBlock Grid.Column="0"
-                   Grid.Row="3"
+                   Grid.Row="4"
                    Margin="10"
                    VerticalAlignment="Center" 
                    Text="{Binding OutputText, StringFormat=Output: {0}}"/>
         <Button Grid.Column="1"
-                Grid.Row="3"
+                Grid.Row="4"
                 Margin="10"
                 HorizontalAlignment="Stretch"
                 Content="Render"
